--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<body>
 		<div id="flashContent">
 			<object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" width="1000" height="700" id="indexfinal" align="middle">
-				<param name="movie" value="indexfinal.swf" />
+				<param name="movie" value="index.swf" />
 				<param name="quality" value="high" />
 				<param name="bgcolor" value="#ff00ff" />
 				<param name="play" value="true" />
