--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 	<head>
-		<title>indexfinal</title>
+		<title>index</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<style type="text/css" media="screen">
-		html, body { height:100%; background-color: #ff00ff;}
+		html, body { height:100%; background-color: #ffffff;}
 		body { margin:0; padding:0; overflow:hidden; }
 		#flashContent { width:100%; height:100%; }
 		</style>
 	</head>
 	<body>
 		<div id="flashContent">
-			<object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" width="1000" height="700" id="indexfinal" align="middle">
+			<object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" width="800" height="600" id="index" align="middle">
 				<param name="movie" value="index.swf" />
 				<param name="quality" value="high" />
-				<param name="bgcolor" value="#ff00ff" />
+				<param name="bgcolor" value="#ffffff" />
 				<param name="play" value="true" />
 				<param name="loop" value="true" />
 				<param name="wmode" value="window" />
@@ -24,10 +24,10 @@
 				<param name="salign" value="" />
 				<param name="allowScriptAccess" value="sameDomain" />
 				<!--[if !IE]>-->
-				<object type="application/x-shockwave-flash" data="indexfinal.swf" width="1000" height="700">
-					<param name="movie" value="indexfinal.swf" />
+				<object type="application/x-shockwave-flash" data="index.swf" width="800" height="600">
+					<param name="movie" value="index.swf" />
 					<param name="quality" value="high" />
-					<param name="bgcolor" value="#ff00ff" />
+					<param name="bgcolor" value="#ffffff" />
 					<param name="play" value="true" />
 					<param name="loop" value="true" />
 					<param name="wmode" value="window" />
