--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <body>
 <h1>Darren Yeung's Homepage</h1>
 <ol>
-<li><a href="./CISW360/indexfinal.html">CISW360: Adobe Flash</a></li>
-<li><a href="./CISW400/index.html">CISW400: JavaScript</a></li>
+<li><a href="./CISW360/">CISW360: Adobe Flash</a></li>
+<li><a href="./CISW400/">CISW400: JavaScript</a></li>
 </ol>
 </body>
 
