fixing unity index page

--- a/Unity/index.html
+++ b/Unity/index.html
@@ -19,9 +19,15 @@
     codeUrl: "Release/Games.js",
     memUrl: "Release/Games.mem",
     
-  };
+  };</script>
 
-  /**
+  
+<script src="Release/UnityLoader.js"></script>
+
+</body>
+</html>
+<script>
+/**
    * Created by
    * Matteo Bicocchi @pupunzi
    * Pietro Polsinelli @ppolsinelli
@@ -78,7 +84,3 @@
     }
   },100)
 </script>
-<script src="Release/UnityLoader.js"></script>
-
-  </body>
-</html>
