--- a/Unity/index.html
+++ b/Unity/index.html
@@ -54,7 +54,7 @@ var appName = "<b>" + Module.codeUrl.replace("Release/", "").replace(".js","") +
   var dotCount = 0;
   var checkDisplay = setInterval(function(){
 
-    if(Module.progress.progress > 0) {
+    if(Module.progress > 0) {
       loader.style.display="none";
       clearInterval(checkDisplay);
     } else {
