changing font to black

--- a/Unity/index.html
+++ b/Unity/index.html
@@ -42,7 +42,7 @@ var appName = "<b>" + Module.codeUrl.replace("Release/", "").replace(".js","") +
   loader.style.width = loaderWidth + "px";
   loader.style.height = loaderHeight + "px";
   loader.style.background = "transparent";
-  loader.style.color = "#fff";
+  loader.style.color = "#000";
   loader.style.opacity = 0.8;
   loader.style.fontSize = "16px";
   loader.style.letterSpacing = "3px";
