--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 <body>
 <h1>Darren Yeung's Homepage</h1>
 <ol>
+<li><a href="./CISW304/">CISW304: CSS </a></li>
 <li><a href="./CISW360/">CISW360: Adobe Flash</a></li>
 <li><a href="./CISW400/">CISW400: JavaScript</a></li>
+<li><a href="./CISW320/">CISW320: Intro Web Design</a></li>
 <li><a href="./Unity/">Unity Games</a></li>
 </ol>
 </body>
