--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <li><a href="./CISW400/">CISW400: JavaScript</a></li>
 <li><a href="./CISW320/">CISW320: Intro Web Design</a></li>
 <li><a href="./Unity/">Unity Games</a></li>
+<li><a href="./Certifications/">Certifications</a></li>
 </ol>
 </body>
 
